--- a/index.html
+++ b/index.html
@@ -11,19 +11,17 @@
        <img src="assets/images/logo-alura.svg" alt="Logo da Alura" width="55" class="header-img">
        <img src="assets/images/logo-oracle.png" alt="Logo do projeto One - Oracle Next Education" width="55" class="header-img">
     </header>
-    <main>
-        <h1 id="titulo">Conheça minha trajetória: <strong>De Letras à Tecnologia!</strong></h1>
-        <p>Olá! Sou Gabriel Marques, estudante de Letras em transição de carreira para área de Tecnologia de Informação. Estou construindo conhecimento em Desenvolvimento Web e Análise de Dados. Vamos nos conectar?</p>
-        <a href="https://instagram.com/gbfmarques" target="_blank" rel="noopener noreferrer" aria-label="Instagram de Gabriel Marques">Instagram</a>
-        <a href="https://github.com/MarquesGabr" target="_blank" rel="noopener noreferrer" aria-label="Github de Gabriel Marques">Github</a>
+    <main class="apresentacao">
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">Conheça minha trajetória: <strong class="titulo-destaque">De Letras à Tecnologia!</strong></h1>
+            <p class="apresentacao__conteudo__p">Olá! Sou Gabriel Marques, estudante de Letras em transição de carreira para área de Tecnologia de Informação. Estou construindo conhecimento em Desenvolvimento Web e Análise de Dados. Vamos nos conectar?</p>
+            <div class="apresentacao__links">
+                <a class="apresentacao__links__link" href="https://instagram.com/gbfmarques" target="_blank" rel="noopener noreferrer" aria-label="Instagram de Gabriel Marques">Instagram</a>
+                <a class="apresentacao__links__link" href="https://github.com/MarquesGabr" target="_blank" rel="noopener noreferrer" aria-label="Github de Gabriel Marques">Github</a>
+            </div>
+        </section>
         <img src="assets/images/foto-de-perfil.png" alt="Foto de perfil de Gabriel Marques" width="470">
     </main>
-    <footer>
-        <h2 id="contato">Contato:</h2>
-        <img src="assets/images/logo-gmail.svg" alt="Logo do Gmail" width="50" class="footer-img">
-        <a href="mailto:contatogabrielmrs@gmail.com" target="_blank" rel="noopener noreferrer">contatogabrielmrs@gmail.com</a><br><br>
-        <img src="assets/images/logo-linkedin.svg" alt="Logo do LinkedIn" width="50" class="footer-img">
-        <a href="https://linkedin.com/in/gabriel-fab-marques" target="_blank" rel="noopener noreferrer">Me encontre no LinkedIn!</a>
-    </footer>
+    <!--Adicionar um footer com email e linkedIn-->
 </body>
 </html>
