--- a/index.html
+++ b/index.html
@@ -4,19 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trajetória de Gabriel Marques</title>
-    <link rel="stylesheet" href="assets/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
+
+<header class="cabecalho">
+    <nav class="cabecalho__menu">
+        <a class="cabecalho__menu__link" href="index.html">Home</a>
+        <a class="cabecalho__menu__link" href="about.html">Sobre Mim</a>
+    </nav>
+</header>
+
 <body>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Conheça minha trajetória: <strong class="titulo-destaque">De Letras à Tecnologia!</strong></h1>
             <p class="apresentacao__conteudo__p">Olá! Sou Gabriel Marques, estudante de Letras em transição de carreira para área de Tecnologia de Informação. Estou construindo conhecimento em Desenvolvimento Web e Análise de Dados. Vamos nos conectar?</p>
             <div class="apresentacao__links">
-                <a class="apresentacao__links__link" href="https://instagram.com/gbfmarques" target="_blank" rel="noopener noreferrer" aria-label="Instagram de Gabriel Marques">Instagram</a>
-                <a class="apresentacao__links__link" href="https://github.com/MarquesGabr" target="_blank" rel="noopener noreferrer" aria-label="Github de Gabriel Marques">Github</a>
+                <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
+                <a class="apresentacao__links__link" href="https://github.com/MarquesGabr" target="_blank" rel="noopener noreferrer" aria-label="Github de Gabriel Marques">
+                    <img src="assets/images/github.png" alt="Logo Github">
+                    Github
+                </a>
+                <a class="apresentacao__links__link" href="https://instagram.com/gbfmarques" target="_blank" rel="noopener noreferrer" aria-label="Instagram de Gabriel Marques">
+                    <img src="assets/images/instagram.png" alt="Logo Instagram">
+                    Instagram
+                </a>
+                <a class="apresentacao__links__link" href="www.linkedin.com/in/gabriel-fab-marques" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn de Gabriel Marques">
+                    <img src="assets/images/linkedin.png" alt="LinkedIn Instagram">
+                    LinkedIn
+                </a>
             </div>
         </section>
         <img src="assets/images/foto-de-perfil.png" alt="Foto de perfil de Gabriel Marques" width="470">
     </main>
+
+    <footer class="rodape">
+        <p>Desenvolvido por Gabriel Marques</p>
+    </footer>
 </body>
 </html>
